feat: 改进兼容性与开发体验
后端将 Java 16+ 的 `toList()` 替换为 `Collectors.toList()`，并显式声明 Lambda 表达式类型以兼容旧版编译器。前端调整构建目标为 ES2019 并添加浏览器兼容性降级方案；同时改进启动脚本以自动探测 Java/Maven/MySQL 路径。